--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,11 @@
     <string name="hello_world">Hello world!</string>
     <string name="main">This application implements the last five mini projects from Coursera class \"An Introduction to Interactive Programming in Python
 by Joe Warren, John Greiner, Stephen Wong, Scott Rixner\", these five mini projects are\n\"stopwatch\" - A reflex testing game,\n\"Blackjack\" - A simple implementation of blackjack,\n\"Memory\" - A simple implementaion of classic memory game,\n\"Pong\" - Classic pong implementation and\n\"RiceRocks\" - \'Asteroids\' implementation</string>
+    <string name="stopwatch">This is a test of your reflexes. If you managed to stop the stop watch at a whole second you will earn a point, if u failed you will lose one.  Tap on the stopwatch to start or stop it.</string>
+    <string name="black">It\'s a simpler version of the blackjack card game, with simplified rules. I can\'t explain the rules here(see the application page), and controls are pretty simple otherwise, \"new game\" to start a game, and than hit or stand!  CREDITS : Cards images by \'Lanea Zimmerman\' on OpenGameArt.com</string>
+    <string name="memory">It\'s an implementation of classic \'memory\' game. You tap the cards to expose them and try to pair the cards. Number of turns are recorded. Player with least number of turns wins.   CREDITS : Cards images by \'Lanea Zimmerman\' on OpenGameArt.com</string>
+    <string name="pong">In this simpler version of pong right paddle is controlled by you and left is controlled by your phone, first one to achieve 10 points will win!</string>
+    <string name="rice">Ricerocks was the final project for the coursera python class. It\'s a implementation of classic Asteroids game. On splash screen choose \'new\' to start playing, other controls are \'forward\',\'rotate left\',\'rotate right\' and \'fire\'. Destroy rocks to earn score, and avoid getting destroyed by them.   CREDITS : Ship by MillionthVector (http://millionthvector.blogspot.de), Rocks by jfitz (http://www.jfitz.com/)
+        </string>
 
 </resources>
